[package]
name = "rust-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3", features = [
    "winuser", 
    "processthreadsapi", 
    "memoryapi", 
    "handleapi", 
    "errhandlingapi", 
    "synchapi", 
    "debugapi",
    "winbase",
    "processenv",
    "wow64apiset",
    "securitybaseapi",
    "tlhelp32",
    "psapi",
    "impl-default",
    "winerror",
    "winreg",
    "winsvc"
]}
lazy_static = "1.4"
sysinfo = "0.29"
wmi = "0.13"
rand = "0.8"
winreg = "0.50"
aes = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21" 